[gd_scene load_steps=3 format=3 uid="uid://bvr6y7pl6gvhe"]

[ext_resource type="Script" path="res://state_machine/plugin/sm_editing.gd" id="1_eenv7"]
[ext_resource type="Texture2D" uid="uid://6anh5hsj1oso" path="res://UI/open-folder_delapouite.png" id="2_8hiuf"]

[node name="SMEditing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -785.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eenv7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Editing State Machine"
horizontal_alignment = 1

[node name="ResourcePickRoot" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PathLabel" type="Label" parent="VBoxContainer/ResourcePickRoot"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="OpenStateMachineButton" type="Button" parent="VBoxContainer/ResourcePickRoot"]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_8hiuf")
expand_icon = true

[node name="ParametersPanel" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ParametersPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ParametersPanel/MarginContainer"]
visible = false
layout_mode = 2
text = "No State Machine Selected"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ParametersPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Prameters"
horizontal_alignment = 1

[node name="ParametersRoot" type="VBoxContainer" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddOptions" type="HBoxContainer" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddFloat" type="Button" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer/AddOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "float"

[node name="AddInt" type="Button" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer/AddOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "int"

[node name="AddBool" type="Button" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer/AddOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "bool
"

[node name="AddTrigger" type="Button" parent="VBoxContainer/ParametersPanel/MarginContainer/VBoxContainer/AddOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "trigger"

[connection signal="pressed" from="VBoxContainer/ResourcePickRoot/OpenStateMachineButton" to="." method="_on_open_state_machine_button_pressed"]
